--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   google_fonts: ^2.0.0
   country_code_picker: ^2.0.1
   page_transition: "^1.1.7+6"
+  lottie: ^1.0.1
   
 dev_dependencies:
   flutter_test:
@@ -53,6 +54,7 @@ flutter:
     - asset/
     - asset/logo/
     - asset/getstartimg/
+    - asset/lottie/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
